final product + final CR

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -26,7 +25,7 @@
         <h1>Présentation</h1>
 
         <p>
-            Polytech dijon est une <strong>école d'ingénieurs publique</strong> de l'Université de Bourgogne créée en 1991. Les d'inscription s'élève à 601 euros (gratuit pour les boursiers). Elle béneficie de <strong>toutes les infrastructures de l'Université de Bourgogne</strong> : installations sportives, bibliothèques, résidences universitaires...)
+            Polytech dijon est une <strong>école d'ingénieurs publique</strong> de l'Université de Bourgogne créée en 1991. Les d'inscription s'élève à 601 euros (gratuit pour les boursiers). <br> Elle béneficie de <strong>toutes les infrastructures de l'Université de Bourgogne</strong> : installations sportives, bibliothèques, résidences universitaires...)
         </p>
         <video autoplay loop muted>
             <source src="src/public/videos/esirem.mp4">
